recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(0.1)
 required: Int
    spiral(50,1,0,0.1);
                  ^