recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.code
override def run() {
    spiral(50,1,0,0.1);
}